[gd_scene load_steps=15 format=3 uid="uid://bvgct8ex4dstv"]

[ext_resource type="Script" path="res://tank_zombie.gd" id="1_patpm"]
[ext_resource type="Texture2D" uid="uid://ki7eft502n0h" path="res://assets/player/icons8-белый-круг-48.png" id="2_iyekq"]
[ext_resource type="Texture2D" uid="uid://depdv7o1jpm4x" path="res://assets/1_14.png" id="3_sreqq"]
[ext_resource type="PackedScene" uid="uid://dxwulhmvoo0om" path="res://health_component.tscn" id="4_msg6b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_skf25"]
radius = 16.1518

[sub_resource type="Animation" id="Animation_xbba1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(18, 92, 999, 105)]
}

[sub_resource type="Animation" id="Animation_drgdn"]
resource_name = "move"
length = 0.35
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(17, 92, 999, 105), Rect2(20, 92, 999, 105), Rect2(27, 92, 999, 105), Rect2(33, 92, 999, 105), Rect2(30, 92, 999, 105), Rect2(28, 92, 999, 105), Rect2(27, 92, 999, 105), Rect2(27, 92, 999, 105)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qoag7"]
_data = {
"RESET": SubResource("Animation_xbba1"),
"move": SubResource("Animation_drgdn")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_uyw7u"]
load_path = "res://.godot/imported/1dasda (1).png-e23147778485b1c03121df0f51c93e6d.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_dss1n"]
atlas = SubResource("CompressedTexture2D_uyw7u")
region = Rect2(0, 0, 129, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4coi"]
atlas = SubResource("CompressedTexture2D_uyw7u")
region = Rect2(129, 0, 129, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc58a"]
atlas = SubResource("CompressedTexture2D_uyw7u")
region = Rect2(645, 0, 129, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_okjq1"]
atlas = SubResource("CompressedTexture2D_uyw7u")
region = Rect2(774, 0, 129, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2u8a"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dss1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4coi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc58a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okjq1")
}],
"loop": true,
"name": &"move",
"speed": 9.0
}]

[node name="tank_zombie" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(4.24, 4.24)
collision_layer = 2
collision_mask = 17
script = ExtResource("1_patpm")
pointsForKill = 35
const_move_speed = 150
attack_damage = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
shape = SubResource("CircleShape2D_skf25")

[node name="Graphics" type="Node2D" parent="." groups=["Enemy"]]
position = Vector2(5, -17)

[node name="Alive" type="Sprite2D" parent="Graphics"]
position = Vector2(-5, 11.1038)
rotation = -1.5708
scale = Vector2(0.375098, 0.375098)
hframes = 8
frame = 7
region_enabled = true
region_rect = Rect2(18, 92, 999, 105)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics/Alive"]
libraries = {
"": SubResource("AnimationLibrary_qoag7")
}
speed_scale = 0.5

[node name="asd" type="AnimatedSprite2D" parent="Graphics"]
visible = false
position = Vector2(-13.2547, 11.3396)
rotation = -1.5671
scale = Vector2(0.378434, 0.378434)
sprite_frames = SubResource("SpriteFrames_u2u8a")
animation = &"move"

[node name="Dead" type="Sprite2D" parent="Graphics" groups=["Enemy"]]
self_modulate = Color(0.0196078, 0.419608, 0.0784314, 1)
z_index = -1
position = Vector2(-5, 17)
scale = Vector2(0.881356, 0.881356)
texture = ExtResource("2_iyekq")
region_rect = Rect2(45, 89, 21, 21)

[node name="114" type="Sprite2D" parent="Graphics/Dead" groups=["Enemy"]]
show_behind_parent = true
position = Vector2(4.97113, -2.25)
scale = Vector2(2.05442, 2)
texture = ExtResource("3_sreqq")

[node name="RayCast2D" type="RayCast2D" parent="." groups=["Enemy"]]
target_position = Vector2(-0.183824, -21.3235)
collision_mask = 3

[node name="deadLeft" type="Timer" parent="." groups=["Enemy"]]
wait_time = 5.0

[node name="attackInt" type="Timer" parent="." groups=["Enemy"]]

[node name="healthComponent" parent="." groups=["Enemy"] instance=ExtResource("4_msg6b")]
max_health = 200.0

[connection signal="timeout" from="deadLeft" to="." method="_on_dead_left_timeout"]
[connection signal="timeout" from="attackInt" to="." method="_on_attack_int_timeout"]
